--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "antd": "^5.24.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "jotai": "^2.12.4",
+    "jotai": "^2.13.1",
+    "jotai-optics": "^0.4.0",
+    "lodash.clonedeep": "^4.5.0",
+    "optics-ts": "^2.4.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-papaparse": "^4.4.0",
     "react-use": "^17.6.0",
-    "styled-components": "^6.1.18"
+    "styled-components": "^6.1.18",
+    "uuid": "^12.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
