feat: スタイルとか

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "quickfix.biome": "explicit",
     "source.organizeImports.biome": "explicit"
   },
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "cSpell.words": ["DTDR", "Hoverable"]
 }
