--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,5 @@
     "source.organizeImports.biome": "explicit"
   },
   "editor.tabSize": 2,
-  "cSpell.words": ["DTDR", "Hoverable"]
+  "cSpell.words": ["DTDR", "Hoverable", "typia"]
 }
