--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/core": "^6.3.1",
     "antd": "^5.24.4",
     "bootstrap-icons": "^1.11.3",
+    "date-fns": "^4.1.0",
     "jotai": "^2.13.1",
     "jotai-optics": "^0.4.0",
     "lodash.clonedeep": "^4.5.0",
