feat: バリデーション

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,5 @@
     "source.organizeImports.biome": "explicit"
   },
   "editor.tabSize": 2,
-  "cSpell.words": ["DTDR", "Hoverable", "typia"]
+  "cSpell.words": ["DTDR", "Hoverable", "ryoppippi", "typia", "Unplugin"]
 }
