--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-papaparse": "^4.4.0",
     "react-use": "^17.6.0",
     "styled-components": "^6.1.18",
-    "uuid": "^12.0.0"
+    "uuid": "^12.0.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
