--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-papaparse": "^4.4.0",
+    "react-router-dom": "^7.9.4",
     "react-use": "^17.6.0",
     "styled-components": "^6.1.18",
     "uuid": "^12.0.0",
