--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@dnd-kit/core": "^6.3.1",
+    "@headlessui/react": "^2.2.9",
     "antd": "^5.24.4",
     "bootstrap-icons": "^1.11.3",
     "date-fns": "^4.1.0",
