--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -26,10 +26,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build the React app
-        run: npm run build
-
       - name: Deploy to GitHub Pages
-        run: npm run deploy
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          npm run deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
