--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -30,6 +30,7 @@ jobs:
         run: |
           git config --local user.email "66516617+zejba@users.noreply.github.com"
           git config --local user.name "zejba"
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
           npm run deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
