--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -3,16 +3,14 @@ name: Deploy React App to GitHub Pages
 on:
   workflow_dispatch:
   push:
-    branches:
-      - master
+    branches: [main]
+
+permissions:
+  contents: write
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
 
     steps:
       - name: Checkout source code
@@ -21,16 +19,19 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Deploy to GitHub Pages
+      - name: Configure Git for gh-pages
         run: |
-          git config --local user.email "66516617+zejba@users.noreply.github.com"
-          git config --local user.name "zejba"
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+          git config user.email "66516617+zejba@users.noreply.github.com"
+          git config user.name "zejba"
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
           npm run deploy
+
+      - name: Deploy to GitHub Pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: npm run deploy
