スタイル調整と画像保存機能

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.24.4",
     "bootstrap-icons": "^1.11.3",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
     "jotai": "^2.13.1",
     "jotai-optics": "^0.4.0",
     "lodash.clonedeep": "^4.5.0",
