--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@dnd-kit/core": "^6.3.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.9",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/material": "^7.3.5",
     "antd": "^5.24.4",
     "bootstrap-icons": "^1.11.3",
     "date-fns": "^4.1.0",
