--- a/.github/workflows/update-servant-data-json.yaml
+++ b/.github/workflows/update-servant-data-json.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run update script
-        uses: zejba/get-fgo-data@main
+        uses: zejba/get-fgo-data@master
         with:
           servantDataJSONPath: src/data/servant_data.json
 
